<resources>
    <string name="app_name">GuessANumber</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_del">DEL</string>
    <string name="_0" translatable="false">0</string>
    <string name="_ok">OK</string>
    <string name="_start">START</string>
    <string name="start_message">Click START to play</string>
    <string name="welcome">Welcome!</string>
    <string name="too_small">TOO SMALL</string>
    <string name="too_big">TOO BIG</string>
    <string name="you_win">YOU WIN</string>
    <string name="you_loose">YOU LOOSE</string>
    <string name="empty"></string>
    <string name="rem_att">"Remained attempts: "</string>
</resources>