<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lives_height"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLives"
        app:srcCompat="@drawable/wait" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivState" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNumPad"
        android:layout_width="331dp"
        android:layout_height="210dp"
        android:layout_marginBottom="@dimen/clNumPad_bottom_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_space"
            android:backgroundTint="@color/orange"
            android:text="@string/_1"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_space"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_space"
            android:backgroundTint="@color/orange"
            android:text="@string/_2"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:backgroundTint="@color/orange"
            android:text="@string/_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_space"
            android:backgroundTint="@color/orange"
            android:text="@string/_4"
            app:layout_constraintEnd_toStartOf="@+id/btn5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_space"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_space"
            android:backgroundTint="@color/orange"
            android:text="@string/_5"
            app:layout_constraintEnd_toStartOf="@+id/btn6"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_space"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:backgroundTint="@color/orange"
            android:text="@string/_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />

        <Button
            android:id="@+id/bnt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_space"
            android:backgroundTint="@color/orange"
            android:text="@string/_7"
            app:layout_constraintEnd_toStartOf="@+id/btn8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_space"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_space"
            android:backgroundTint="@color/orange"
            android:text="@string/_8"
            app:layout_constraintEnd_toStartOf="@+id/btn9"
            app:layout_constraintStart_toEndOf="@+id/bnt7"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_space"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:backgroundTint="@color/orange"
            android:text="@string/_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <Button
            android:id="@+id/btnCanc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/button_horizontal_space"
            android:layout_marginEnd="@dimen/button_horizontal_space"
            android:backgroundTint="@color/orange"
            android:text="@string/_del"
            app:layout_constraintEnd_toStartOf="@+id/btn0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bnt7" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_space"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_space"
            android:backgroundTint="@color/orange"
            android:text="@string/_0"
            app:layout_constraintEnd_toStartOf="@+id/btnOk"
            app:layout_constraintStart_toEndOf="@+id/btnCanc"
            app:layout_constraintTop_toBottomOf="@+id/btn8" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_space"
            android:layout_marginTop="@dimen/button_vertical_space"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:backgroundTint="@color/orange"
            android:text="@string/_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintTop_toBottomOf="@+id/btn9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="173dp"
        android:layout_height="67dp"
        android:layout_marginBottom="@dimen/start_bottom_padding"
        android:text="@string/_start"
        app:layout_constraintBottom_toTopOf="@+id/clNumPad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>